--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -1,3 +1,8 @@
+#hidenForms {
+    position: absolute;
+    top: -100px;
+    left: -100px;
+}
 #header-links {
     background-color: silver;
     padding: 10px;
@@ -10,7 +15,7 @@ table {
 }
 
 form {
-    background-color: #fff;
+    background-color: wite;
 }
 
 .result tbody tr td {
