--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -18,12 +18,7 @@ form {
     background-color: wite;
 }
 
-.result tbody tr td {
-    padding: 5px;
-    border-collapse: collapse;
-    border: 1px solid black;
-}
-.result tbody tr th {
+.result  td , .result th{
     padding: 5px;
     border-collapse: collapse;
     border: 1px solid black;
