Update templates add bootstrap css

--- a/resources/templates/about.html
+++ b/resources/templates/about.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-  <p>mpm-web... work in progress</p>
+  <p>my-webapp... work in progress</p>
 {% endblock %}
