--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -5,9 +5,9 @@
     <p>База данных сайта не синхронизирована с основной базой
       завода и не содержит последних изменений. Последнее обновление 
       <span class="label label-success">
-	{{db-update-date|date:"dd.MM.yyyy"}}</span></p>
+    {{db-update-date|date:"dd.MM.yyyy"}}</span></p>
     <p>Вы можете начать с поиска узла/детали/комплектующих.</p>
-    <p><a class="btn btn-primary" href="{{serverlet-context}}/search">
-	Перейти к поиску &raquo;</a></p>
+    <p><a class="btn btn-primary" href="{{servlet-context}}/search">
+    Перейти к поиску &raquo;</a></p>
   </div>
 {% endblock %}
