--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -6,55 +6,53 @@
     <title>ОГК</title>
 
     <!-- styles -->
-    {% style "/assets/bootstrap/css/bootstrap.min.css" %}
-    {% style "/assets/font-awesome/css/font-awesome.min.css" %}
-
-    {% style "/css/screen.css" %}
+    {% style "/css/bootstrap.min.css" %}
+    {% style "/css/jquery-ui.min.css" %}
+    {% style "/css/styles.css" %}
   </head>
   <body>
       <!-- navbar -->
-      <nav class="navbar navbar-light bg-faded" role="navigation">
-          <button class="navbar-toggler hidden-sm-up"
-                  type="button"
-                  data-toggle="collapse"
-                  data-target="#collapsing-navbar">
-              &#9776;
-          </button>
-          <div class="collapse navbar-toggleable-xs" id="collapsing-navbar">
-              <a class="navbar-brand" href="{{servlet-context}}/">Cайт
-		ОГК</a>
-              <ul class="nav navbar-nav">
-                  <li class="nav-item">
-                      <a href="{{servlet-context}}/"
-                         class="nav-link{% ifequal page "home.html" %} active{%endifequal%}">
-                      Главная
-                      </a>
-                  </li>
-                  <li class="nav-item">
-                      <a href="{{servlet-context}}/about"
-                         class="nav-link{% ifequal page "about.html" %} active{%endifequal%}">
-                      О проекте
-                      </a>
-                  </li>
-		  <li class="nav-item">
-		    <a href="http://192.168.0.132/wiki/ru"
-		       class="nav-link">
-		       Wiki
-		    </a>
-                  </li>
-              </ul> 
+      <nav class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="{{servlet-context}}/">Cайт ОГК</a>
           </div>
+
+          <ul class="nav navbar-nav">
+              <li class="nav-item">
+                  <a href="{{servlet-context}}/"
+                     class="nav-link {% ifequal page "home.html" %} active{%endifequal%}">
+                    Главная
+                  </a>
+              </li>
+              <li class="nav-item">
+                  <a href="{{servlet-context}}/about"
+                     class="nav-link {% ifequal page "about.html" %} active{%endifequal%}">
+                    О проекте
+                  </a>
+              </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="nav-item">
+                <a href="http://192.168.0.132/wiki/ru"
+                   class="nav-link">
+                   Wiki
+                </a>
+            </li>
+          </ul>
+        </div>
       </nav>
 
-    <div class="container-fluid">
+    <div class="container">
       {% block content %}
       {% endblock %}
     </div>
 
     <!-- scripts -->
-    {% script "/assets/jquery/jquery.min.js" %}
-    {% script "/assets/tether/dist/js/tether.min.js" %}
-    {% script "/assets/bootstrap/js/bootstrap.min.js" %}
+    {% script "/js/jquery.js" %}
+    {% script "/js/bootstrap.min.js" %}
+    {% script "/js/jquery-ui.min.js" %}
+    {% script "/js/table.js" %}
 
     <script type="text/javascript">
       var context = "{{servlet-context}}";
