--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -20,9 +20,9 @@
 
           <ul class="nav navbar-nav">
               <li class="nav-item">
-                  <a href="{{servlet-context}}/"
+                  <a href="{{servlet-context}}/products"
                      class="nav-link {% ifequal page "home.html" %} active{%endifequal%}">
-                    Главная
+                    Продукция
                   </a>
               </li>
               <li class="nav-item">
