--- a/resources/templates/search/results.html
+++ b/resources/templates/search/results.html
@@ -5,11 +5,13 @@
         {% include "left-nav-bar.html" %}
     </div>
     <div class="col-md-9">
+        <h3>Результаты поиска {{pref}} {{num}} {{name}}</h3>
+        <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
         <table class="table-bordered table-condensed">
             <tr><th>Обозначение</th><th>Номер</th><th>Название</th></tr>
             {% for res in results %}
                 <tr>
-                    <td>{{res.pref}}</td>
+                    <td>{{res.prefix}}</td>
                     <td>{{res.num}}</td>
                     <td>{{res.name}}</td>
                 </tr>
