--- a/resources/templates/search/results.html
+++ b/resources/templates/search/results.html
@@ -6,8 +6,10 @@
     </div>
     <div class="col-md-9">
         <h3>Результаты поиска {{pref}} {{num}} {{name}}</h3>
-        <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
         <table class="table-bordered table-condensed">
+            <caption>
+                <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
+            </caption>
             <tr><th>Обозначение</th><th>Номер</th><th>Название</th></tr>
             {% for res in results %}
                 <tr>
