--- a/resources/templates/search.html
+++ b/resources/templates/search.html
@@ -2,6 +2,7 @@
 {% block content %}
 <div class="row">
   <div class="col-md-offset-2 col-md-7">
+    <div class="col-md-offset-3"><h2>Поиск изделия</h2></div>
     <form class="form-horizontal" action="{{servlet-context}}/search/results">
       <div class="form-group">
         <label for="inputPrefix" class="col-md-3 control-label">Обозначение</label>
