Add link to metals page

--- a/resources/templates/search/results.html
+++ b/resources/templates/search/results.html
@@ -24,6 +24,7 @@
 <div id="popup" title="Действия">
     <p><a href="/composition/results?id=">Состав</a></p>
     <p><a href="/occurrence/results?id=">Входимость</a></p>
+    <p><a href="/metals/results?id=">Драгметаллы</a></p>
 </div>
 {% endblock %}
 {% block page-scripts %}
