--- a/resources/templates/about.html
+++ b/resources/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-  <p>my-webapp... work in progress</p>
+  <p>Сайт ОГК - удобный просмотр конструкторской базы данных завода
+    ... work in progress(WIP)</p>
 {% endblock %}
