--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -62,6 +62,7 @@
 
     <script type="text/javascript">
       var context = "{{servlet-context}}";
+      var page = "{{page}}";
     </script>
     {% block page-scripts %}
     {% endblock %}
