--- a/resources/templates/left-nav-bar.html
+++ b/resources/templates/left-nav-bar.html
@@ -1,12 +1,12 @@
 <ul class="nav nav-pils nav-stacked">
   <li role="presentation" class="">
-    <a href="/search">Поиск</a>
+    <a href="{{servlet-context}}/search">Поиск</a>
   </li>
     <li role="presentation" class="">
-    <a href="/products">Продукция</a>
+    <a href="{{servlet-context}}/products">Продукция</a>
   </li>
 
   <li role="presentation" class="">
-    <a href="/metals">Просмотр драгметаллов</a>
+    <a href="{{servlet-context}}/metals">Просмотр драгметаллов</a>
   </li>
 </ul>
