--- a/resources/templates/ogk/ogk-left-nav.html
+++ b/resources/templates/ogk/ogk-left-nav.html
@@ -4,18 +4,18 @@
     <a href="/search">Поиск</a>
   </li>
   <li role="presentation" class="">
-    <a href="/composition">Просмотр состава</a>
+    <a href="{{servlet-context}}/composition">Просмотр состава</a>
   </li>
   <li role="presentation" class="">
-    <a href="/occurrence">Просмотр вхождения</a>
+    <a href="{{servlet-context}}/occurrence">Просмотр вхождения</a>
   </li>
   <li role="presentation" class="">
-    <a href="/diff">Просмотр различий</a>
+    <a href="{{servlet-context}}/diff">Просмотр различий</a>
   </li>
   <li role="presentation" class="">
-    <a href="/rare-metals">Просмотр драгметаллов</a>
+    <a href="{{servlet-context}}/rare-metals">Просмотр драгметаллов</a>
   </li>
   <li role="presentation" class="">
-    <a href="/products">Продукция</a>
+    <a href="{{servlet-context}}/products">Продукция</a>
   </li>
 </ul>
