--- a/resources/templates/occurrence/results.html
+++ b/resources/templates/occurrence/results.html
@@ -23,9 +23,9 @@
     </div>
 </div>
 <div id="popup" title="Действия">
-    <p><a href="/composition/results?id=">Состав</a></p>
-    <p><a href="/occurrence/results?id=">Входимость</a></p>
-    <p><a href="/metals/results?id=">Драгметаллы</a></p>
+    <p><a href="{{servlet-context}}/composition/results?id=">Состав</a></p>
+    <p><a href="{{servlet-context}}/occurrence/results?id=">Входимость</a></p>
+    <p><a href="{{servlet-context}}/metals/results?id=">Драгметаллы</a></p>
 </div>
 {% endblock %}
 {% block page-scripts %}
