Hide left nav bar when printing
For better user experience

--- a/resources/templates/left-nav-bar.html
+++ b/resources/templates/left-nav-bar.html
@@ -1,4 +1,4 @@
-<ul class="nav nav-pils nav-stacked">
+<ul class="nav nav-pils nav-stacked hidden-print">
   <li role="presentation" class="">
     <a href="{{servlet-context}}/search">Поиск</a>
   </li>
