Add link to plan page on navbar

--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -32,6 +32,12 @@
                   </a>
               </li>
               <li class="nav-item">
+                  <a href="{{servlet-context}}/plans"
+                     class="nav-link {% ifequal page 'products/index.html' %} active{%endifequal%}">
+                    План
+                  </a>
+              </li>
+              <li class="nav-item">
                   <a href="{{servlet-context}}/about"
                      class="nav-link {% ifequal page 'about.html' %} active{%endifequal%}">
                     О проекте
