--- a/resources/templates/plan/index.html
+++ b/resources/templates/plan/index.html
@@ -13,6 +13,9 @@
     <div class="col-md-offset-3 col-md-6">
       <h3>План выпуска продукции на {{month|number-format:%02d}}.{{year}}</h3>
        <table class="table table-bordered table-condensed">
+        <caption>
+            <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
+        </caption>
         <tr>
             <th>Модель</th><th>Кол.</th>
         </tr>
