--- a/resources/templates/plan/search.html
+++ b/resources/templates/plan/search.html
@@ -2,8 +2,8 @@
 {% block content %}
 <div class="row">
   <div class="col-md-offset-2 col-md-8">
-    <div class="col-md-offset-2 hidden-print"><h2>Просмотр плана выпуска продукции</h2>
-    <form class="form-horizontal hidden-print" action="{{servlet-context}}/plans">
+    <div class="col-md-offset-2"><h2>Просмотр плана выпуска продукции</h2>
+    <form class="form-horizontal" action="{{servlet-context}}/plans">
       <div class="form-group">
         <label for="inputYear" class="col-md-3 control-label">Год</label>
         <div class="col-md-6">
@@ -41,6 +41,7 @@
         </div>
       </div>
     </form>
+    </div>
   </div>
 </div>
 {% endblock %}
