--- a/resources/templates/search/results.html
+++ b/resources/templates/search/results.html
@@ -1,24 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
-    <div class="col-md-3">
-        {% include "left-nav-bar.html" %}
-    </div>
-    <div class="col-md-9">
-        <h3>Результаты поиска {{pref}} {{num}} {{name}}</h3>
-        <table class="table-bordered table-condensed">
-            <caption>
-                <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
-            </caption>
-            <tr><th>Обозначение</th><th>Номер</th><th>Название</th></tr>
-            {% for res in results %}
-                <tr data-id="{{res.id}}">
-                    <td>{{res.prefix}}</td>
-                    <td>{{res.num}}</td>
-                    <td>{{res.name}}</td>
-                </tr>
-            {% endfor %}
-        </table>
+    <div class="col-md-offset-2 col-md-9">
+        {% for res in results %}
+            {% if forloop.first %}
+                <h3>Результаты поиска {{pref}} {{num}} {{name}}</h3>
+                <table class="table-bordered table-condensed">
+                    <caption>
+                        <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
+                    </caption>
+                    <tr><th>Обозначение</th><th>Номер</th><th>Название</th></tr>
+            {% endif %}
+                    <tr data-id="{{res.id}}">
+                        <td>{{res.prefix}}</td>
+                        <td>{{res.num}}</td>
+                        <td>{{res.name}}</td>
+                    </tr>
+            {% if forloop.last%}
+                </table>
+            {% endif %}
+        {% empty %}
+            <h3>По вашему запросу ничего не найдено</h3>
+        {% endfor %}
     </div>
 </div>
 <div id="popup" title="Действия">
@@ -30,10 +33,8 @@
 {% block page-scripts %}
 {% script "/js/results.js" %}
 <script type="text/javascript">
-    $('table tr:not(:first)').click(selectOneRow);
-    $('#popup').dialog({
-        width: 90,
-        autoOpen: false
+    $(document).ready(function() {
+        $('tr:not(:first)').mouseenter(enterRow);
     });
 </script>
 {% endblock %}
