--- a/resources/templates/composition/results.html
+++ b/resources/templates/composition/results.html
@@ -1,15 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
-    <div class="col-md-9">
-        <h3>Состав {{pref}} {{num}}</h3>
-        <table class="table-bordered table-condensed">
-            <caption>
-                <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
-            </caption>
-            <tr><th>Поз.</th><th>Обозначение</th><th>Номер</th>
-                <th>Название</th><th>Кол.</th></tr>
-            {% for res in results %}
+    <div class="col-md-offset-2 col-md-9">
+        {% for res in results %}
+            {% if forloop.first %}
+                <h3>Состав {{pref}} {{num}}</h3>
+                    <table class="table-bordered table-condensed">
+                    <caption>
+                        <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
+                    </caption>
+                    <tr><th>Поз.</th><th>Обозначение</th><th>Номер</th>
+                        <th>Название</th><th>Кол.</th></tr>
+            {% endif %}
                 <tr data-id="{{res.id}}">
                     <td>{{res.pos}}</td>
                     <td>{{res.prefix}}</td>
@@ -17,7 +19,12 @@
                     <td>{{res.name}}</td>
                     <td>{{res.qnt}}</td>
                 </tr>
-            {% endfor %}
+            {% if forloop.last%}
+                </table>
+            {% endif %}
+        {% empty %}
+            <h3>По вашему запросу ничего не найдено</h3>
+        {% endfor %}
         </table>
     </div>
 </div>
