--- a/resources/templates/occurrence/results.html
+++ b/resources/templates/occurrence/results.html
@@ -1,21 +1,28 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
-    <div class="col-md-9">
-        <h3>Входимость {{pref}} {{num}}</h3>
-        <table class="table-bordered table-condensed">
-            <caption>
-                <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
-            </caption>
-            <tr><th>Обозначение</th><th>Номер</th>
-                <th>Название</th></tr>
-            {% for res in results %}
+    <div class="col-md-offset-2 col-md-9">
+        {% for res in results %}
+            {% if forloop.first %}
+                <h3>Входимость {{pref}} {{num}}</h3>
+                <table class="table-bordered table-condensed">
+                <caption>
+                    <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
+                </caption>
+                <tr><th>Обозначение</th><th>Номер</th>
+                    <th>Название</th></tr>
+            {% endif %}
                 <tr data-id="{{res.id}}">
                     <td>{{res.prefix}}</td>
                     <td>{{res.num}}</td>
                     <td>{{res.name}}</td>
                 </tr>
-            {% endfor %}
+            {% if forloop.last%}
+                </table>
+            {% endif %}
+        {% empty %}
+            <h3>По вашему запросу ничего не найдено</h3>
+        {% endfor %}
         </table>
     </div>
 </div>
