Change to new popup

--- a/resources/templates/occurrence/results.html
+++ b/resources/templates/occurrence/results.html
@@ -35,10 +35,8 @@
 {% block page-scripts %}
 {% script "/js/results.js" %}
 <script type="text/javascript">
-    $('table tr:not(:first)').click(selectOneRow);
-    $('#popup').dialog({
-        width: 90,
-        autoOpen: false
+    $(document).ready(function() {
+        $('tr:not(:first)').mouseenter(enterRow);
     });
 </script>
 {% endblock %}
