--- a/resources/templates/products/results.html
+++ b/resources/templates/products/results.html
@@ -2,19 +2,25 @@
 {% block content %}
 <div class="row">
     <div class="col-md-offset-3 col-md-9">
-        <h3>Результаты поиска {{pref}} {{name}}</h3>
-        <table class="table-bordered table-condensed">
-            <caption>
-                <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
-            </caption>
-            <tr><th>Обозначение</th><th>Название</th></tr>
-            {% for res in results %}
+        {% for res in results %}
+            {% if forloop.first %}
+                <h3>Результаты поиска {{pref}} {{name}}</h3>
+                <table class="table-bordered table-condensed">
+                <caption>
+                    <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
+                </caption>
+                <tr><th>Обозначение</th><th>Название</th></tr>
+            {% endif %}
                 <tr data-id="{{res.cont_id}}">
                     <td>{{res.pref}}</td>
                     <td>{{res.name}}</td>
                 </tr>
-            {% endfor %}
-        </table>
+            {% if forloop.last%}
+                </table>
+            {% endif %}
+        {% empty %}
+            <h3>По вашему запросу ничего не найдено</h3>
+        {% endfor %}
     </div>
 </div>
 <div id="popup" title="Действия">
