--- a/resources/templates/search/results.html
+++ b/resources/templates/search/results.html
@@ -12,8 +12,8 @@
                     <tr><th>Обозначение</th><th>Номер</th><th>Название</th></tr>
             {% endif %}
                     <tr data-id="{{res.id}}">
-                        <td>{{res.prefix}}</td>
-                        <td>{{res.num}}</td>
+                        <td class="pref">{{res.prefix}}</td>
+                        <td class="num">{{res.num}}</td>
                         <td>{{res.name}}</td>
                     </tr>
             {% if forloop.last%}
@@ -24,17 +24,28 @@
         {% endfor %}
     </div>
 </div>
-<div id="popup" title="Действия">
+<div id="popup" class="hidden-print">
     <p><a href="{{servlet-context}}/composition/results?id=">Состав</a></p>
     <p><a href="{{servlet-context}}/occurrence/results?id=">Входимость</a></p>
     <p><a href="{{servlet-context}}/metals/results?id=">Драгметаллы</a></p>
+</div>
+<div id="floatform" class="hidden-print">
+    <form class="form-inline">
+        <div class="from-group">
+            <input type="text" class="form-control" id="prefixfield" name="pref"
+                placeholder="ОШ-450" value="{{pref}}" size="11">
+            <input type="text" class="form-control" id="numfield" name="num"
+                placeholder=".80.0.000.0.00" value="{{num}}" size="14">
+        </div>
+        <button type="submit" class="btn btn-default">Поиск</button>
+    </form>
 </div>
 {% endblock %}
 {% block page-scripts %}
 {% script "/js/results.js" %}
 <script type="text/javascript">
     $(document).ready(function() {
-        $('tr:not(:first)').mouseenter(enterRow);
+        $('tr:not(:first)').mouseenter(enterRow).click(clickRow);
     });
 </script>
 {% endblock %}
