--- a/resources/templates/occurrence/results.html
+++ b/resources/templates/occurrence/results.html
@@ -13,8 +13,8 @@
                     <th>Название</th></tr>
             {% endif %}
                 <tr data-id="{{res.id}}">
-                    <td>{{res.prefix}}</td>
-                    <td>{{res.num}}</td>
+                    <td class="pref">{{res.prefix}}</td>
+                    <td class="num">{{res.num}}</td>
                     <td>{{res.name}}</td>
                 </tr>
             {% if forloop.last%}
@@ -30,12 +30,24 @@
     <p><a href="{{servlet-context}}/occurrence/results?id=">Входимость</a></p>
     <p><a href="{{servlet-context}}/metals/results?id=">Драгметаллы</a></p>
 </div>
+<div id="floatform" class="hidden-print">
+    <form class="form-inline">
+        <div class="from-group">
+            <input type="text" class="form-control" id="prefixfield" name="pref"
+                placeholder="ОШ-450" value="{{pref}}" size="11">
+            <input type="text" class="form-control" id="numfield" name="num"
+                placeholder=".80.0.000.0.00" value="{{num}}" size="14">
+        </div>
+        <button type="submit" class="btn btn-default"
+            formaction="{{servlet-context}}/search/results">Поиск</button>
+    </form>
+</div>
 {% endblock %}
 {% block page-scripts %}
 {% script "/js/results.js" %}
 <script type="text/javascript">
     $(document).ready(function() {
-        $('tr:not(:first)').mouseenter(enterRow);
+        $('tr:not(:first)').mouseenter(enterRow).click(clickRow);
     });
 </script>
 {% endblock %}
