--- a/resources/templates/composition/results.html
+++ b/resources/templates/composition/results.html
@@ -27,7 +27,7 @@
         {% endfor %}
     </div>
 </div>
-<div id="popup" title="Действия">
+<div id="popup" class="hidden-print" title="Действия">
     <p><a href="{{servlet-context}}/composition/results?id=">Состав</a></p>
     <p><a href="{{servlet-context}}/occurrence/results?id=">Входимость</a></p>
     <p><a href="{{servlet-context}}/metals/results?id=">Драгметаллы</a></p>
