Change table border color

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -9,6 +9,11 @@
     box-shadow: 0 0 6px rgba(0,0,0,0.5);
 }
 
+.table-bordered > tbody > tr > th,
+.table-bordered > tbody > tr > td {
+    border: 1px solid #bbbbbb;
+}
+
  #popup {
     padding: 5px;
     display: none;
