Add popup hiding when mouse click outside of table

--- a/resources/templates/occurrence/results.html
+++ b/resources/templates/occurrence/results.html
@@ -48,6 +48,10 @@
 <script type="text/javascript">
     $(document).ready(function() {
         $('tr:not(:first)').mouseenter(enterRow).click(clickRow);
+        $(document).click(function(){
+            $('#popup').hide();
+            $('tr.selection').toggleClass('selection');
+        });
     });
 </script>
 {% endblock %}
