--- a/resources/templates/search/results.html
+++ b/resources/templates/search/results.html
@@ -28,16 +28,31 @@
     <p><a href="{{servlet-context}}/composition/results?id=">Состав</a></p>
     <p><a href="{{servlet-context}}/occurrence/results?id=">Входимость</a></p>
     <p><a href="{{servlet-context}}/metals/results?id=">Драгметаллы</a></p>
+    <p><a id="aDiff" href="=" title="Добавить для сравнения">К сравнению</a></p>
 </div>
 <div id="floatform" class="hidden-print">
     <form class="form-inline">
-        <div class="from-group">
+        <div>
             <input type="text" class="form-control" id="prefixfield" name="pref"
                 placeholder="ОШ-450" value="{{pref}}" size="11">
             <input type="text" class="form-control" id="numfield" name="num"
                 placeholder=".80.0.000.0.00" value="{{num}}" size="14">
         </div>
         <button type="submit" class="btn btn-default">Поиск</button>
+    </form>
+</div>
+<div id="diffForm" class="hidden-print">
+    <form>
+        <div class="form-group">
+            <label for="firstId">Select..</label>
+            <input type="hidden" id="firstId" name="id1">
+        </div>
+        <div class="form-group">
+            <label for="secondId">Select..</label>
+            <input type="hidden" id="secondId" name="id2">
+        </div>
+        <button type="submit" class="btn btn-default"
+            formaction="{{servlet-context}}/diff/results">Сравнить</button>
     </form>
 </div>
 {% endblock %}
@@ -50,6 +65,7 @@
             $('#popup').hide();
             $('tr.selection').toggleClass('selection');
         });
+        $('#aDiff').click(toDiff);
     });
 </script>
 {% endblock %}
