Add callback to comparison form submit event

--- a/resources/templates/search/results.html
+++ b/resources/templates/search/results.html
@@ -66,6 +66,7 @@
             $('tr.selection').toggleClass('selection');
         });
         $('#aDiff').click(toDiff);
+        $('#diffForm form').submit(diff);
     });
 </script>
 {% endblock %}
