Add comparison form to occurrence page

--- a/resources/templates/occurrence/results.html
+++ b/resources/templates/occurrence/results.html
@@ -29,6 +29,7 @@
     <p><a href="{{servlet-context}}/composition/results?id=">Состав</a></p>
     <p><a href="{{servlet-context}}/occurrence/results?id=">Входимость</a></p>
     <p><a href="{{servlet-context}}/metals/results?id=">Драгметаллы</a></p>
+    <p><a id="aDiff" href="=" title="Добавить для сравнения">К сравнению</a></p>
 </div>
 <div id="floatform" class="hidden-print">
     <form class="form-inline">
@@ -42,6 +43,20 @@
             formaction="{{servlet-context}}/search/results">Поиск</button>
     </form>
 </div>
+<div id="diffForm" class="hidden-print">
+    <form>
+        <div class="form-group">
+            <label for="firstId">Select..</label>
+            <input type="hidden" id="firstId" name="id1">
+        </div>
+        <div class="form-group">
+            <label for="secondId">Select..</label>
+            <input type="hidden" id="secondId" name="id2">
+        </div>
+        <button type="submit" class="btn btn-default"
+            formaction="{{servlet-context}}/diff/results">Сравнить</button>
+    </form>
+</div>
 {% endblock %}
 {% block page-scripts %}
 {% script "/js/results.js" %}
@@ -52,6 +67,8 @@
             $('#popup').hide();
             $('tr.selection').toggleClass('selection');
         });
+        $('#aDiff').click(toDiff);
+        $('#diffForm form').submit(diff);
     });
 </script>
 {% endblock %}
