--- a/resources/templates/metals/results.html
+++ b/resources/templates/metals/results.html
@@ -1,10 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
-    <div class="col-md-3">
-        {% include "left-nav-bar.html" %}
-    </div>
-    <div class="col-md-9">
+    <div class="col-md-offset-2 col-md-9">
         <h3>Содержание драгметаллов в {{pref}} {{num}}</h3>
         <table class="table-bordered table-condensed">
             <caption>
