--- a/resources/templates/search/results.html
+++ b/resources/templates/search/results.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
-    <div class="col-md-offset-2 col-md-9">
+    <div class="col-md-offset-2 col-md-7">
         {% for res in results %}
             {% if forloop.first %}
                 <h3>Результаты поиска {{pref}} {{num}} {{name}}</h3>
@@ -23,6 +23,9 @@
             <h3>По вашему запросу ничего не найдено</h3>
         {% endfor %}
     </div>
+    <div id="docs" class="hidden-print col-md-1">
+        <ul class="list-unstyled"></ul>
+    </div>  
 </div>
 <div id="popup" class="hidden-print">
     <p><a href="{{servlet-context}}/composition/results?id=">Состав</a></p>
