--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -21,6 +21,11 @@
         margin: 10px;
 }
 
+#docs {
+    display: none;
+    margin-top: 220px;
+}
+
 .table-bordered > tbody > tr > th,
 .table-bordered > tbody > tr > td {
     border: 1px solid #bbbbbb;
