--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -31,4 +31,10 @@
     display: none;
     box-shadow: 0 0 6px rgba(0,0,0,0.5);
  }
-
+ 
+.container {
+    margin-bottom: 60px;
+}
+#footer {
+    background: white;
+}
