Fix docs container

--- a/resources/templates/occurrence/results.html
+++ b/resources/templates/occurrence/results.html
@@ -24,10 +24,11 @@
             <h3>По вашему запросу ничего не найдено</h3>
         {% endfor %}
     </div>
-    <div id="docs" class="hidden-print col-md-1">
-        <ul class="list-unstyled"></ul>
-    </div> 
+    
 </div>
+<div id="docs" class="hidden-print">
+        <ul class="list-unstyled"></ul>
+</div> 
 <div id="popup" class="hidden-print" title="Действия">
     <p><a href="{{servlet-context}}/composition/results?id=">Состав</a></p>
     <p><a href="{{servlet-context}}/occurrence/results?id=">Входимость</a></p>
