--- a/resources/templates/composition/results.html
+++ b/resources/templates/composition/results.html
@@ -35,18 +35,9 @@
     <p><a href="{{servlet-context}}/occurrence/results?id=">Входимость</a></p>
     <p><a href="{{servlet-context}}/metals/results?id=">Драгметаллы</a></p>
 </div>
-<div id="floatform" class="hidden-print">
-    <form class="form-inline">
-        <div class="from-group">
-            <input type="text" class="form-control" id="prefixfield" name="pref"
-                placeholder="ОШ-450" value="{{pref}}" size="11">
-            <input type="text" class="form-control" id="numfield" name="num"
-                placeholder=".80.0.000.0.00" value="{{num}}" size="14">
-        </div>
-        <button type="submit" class="btn btn-default"
-            formaction="{{servlet-context}}/search/results">Поиск</button>
-    </form>
-</div>
+
+{% include "search_form.html" %}
+
 {% endblock %}
 {% block page-scripts %}
 {% script "/js/results.js" %}
