Add button to result pages

--- a/resources/templates/occurrence/results.html
+++ b/resources/templates/occurrence/results.html
@@ -64,6 +64,7 @@
         });
         $('#aDiff').click(toDiff);
         $('#diffForm form').submit(diff);
+        joinBtn();
     });
 </script>
 {% endblock %}
