--- a/resources/templates/search/results.html
+++ b/resources/templates/search/results.html
@@ -62,6 +62,7 @@
         });
         $('#aDiff').click(toDiff);
         $('#diffForm form').submit(diff);
+        joinBtn();
     });
 </script>
 {% endblock %}
