--- a/resources/templates/composition/results.html
+++ b/resources/templates/composition/results.html
@@ -48,6 +48,7 @@
             $('#popup').hide();
             $('tr.selection').toggleClass('selection');
         });
+        joinBtn();
     });
 </script>
 {% endblock %}
