--- a/resources/templates/composition/results.html
+++ b/resources/templates/composition/results.html
@@ -4,7 +4,7 @@
     <div class="col-md-offset-1 col-md-8">
         {% for res in results %}
             {% if forloop.first %}
-                <h3>Состав {{pref}} {{num}}</h3>
+                <h3>Состав {{pref}} {{num}} {{name}}</h3>
                     <table class="table-bordered table-condensed">
                     <caption>
                         <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
