Update template file

--- a/resources/templates/metals/results.html
+++ b/resources/templates/metals/results.html
@@ -9,14 +9,12 @@
             </caption>
             <tr><th>Золото</th><th>Серебро</th><th>Платина</th>
                 <th>Палладий</th></tr>
-            {% for res in results %}
                 <tr>
-                    <td>{{res.gold}}</td>
-                    <td>{{res.silver}}</td>
-                    <td>{{res.pl}}</td>
-                    <td>{{res.pal}}</td>
+                    <td>{{results.gold}}</td>
+                    <td>{{results.silver}}</td>
+                    <td>{{results.pl}}</td>
+                    <td>{{results.pal}}</td>
                 </tr>
-            {% endfor %}
         </table>
     </div>
 </div>
