--- a/resources/templates/metals/results.html
+++ b/resources/templates/metals/results.html
@@ -2,20 +2,39 @@
 {% block content %}
 <div class="row">
     <div class="col-md-offset-2 col-md-9">
-        <h3>Содержание драгметаллов в {{pref}} {{num}}</h3>
-        <table class="table-bordered table-condensed">
-            <caption>
-                <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
-            </caption>
-            <tr><th>Золото</th><th>Серебро</th><th>Платина</th>
-                <th>Палладий</th></tr>
-                <tr>
-                    <td>{{results.gold}}</td>
-                    <td>{{results.silver}}</td>
-                    <td>{{results.pl}}</td>
-                    <td>{{results.pal}}</td>
+	{% for res in results.parts %}
+            {% if forloop.first %}
+                <h3>Содержание драгметаллов в {{pref}} {{num}}</h3>
+                <table class="table-bordered table-condensed">
+                <caption>
+                    <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
+                </caption>
+                <tr><th>Обозначение</th><th>Номер</th>
+                  <th>Название</th><th>Кол.</th><th>Золото</th><th>Серебро</th>
+		  <th>Платина</th><th>Палладий</th></tr>
+		{% endif %}
+                <tr data-id="{{res.id}}">
+                    <td class="pref">{{res.prefix}}</td>
+                    <td class="num">{{res.num}}</td>
+                    <td>{{res.name}}</td>
+		    <td>{{res.qnt}}</td>
+		    <td>{{res.gold}}</td>
+		    <td>{{res.silver}}</td>
+		    <td>{{res.pl}}</td>
+		    <td>{{res.pal}}</td>
                 </tr>
-        </table>
+		{% if forloop.last%}
+		<tr>
+		  <td colspan="4">Итого:</td>
+		  <td>{{results.metals.gold}}</td>
+                  <td>{{results.metals.silver}}</td>
+                  <td>{{results.metals.pl}}</td>
+                  <td>{{results.metals.pal}}</td>
+		</tr>
+                </table>
+            {% endif %} {% empty %}
+            <h3>Драгметаллов не найдено</h3>
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
