Fix empty column on metals page

--- a/resources/templates/metals/results.html
+++ b/resources/templates/metals/results.html
@@ -14,7 +14,7 @@
 		  <th>Платина</th><th>Палладий</th></tr>
 		{% endif %}
                 <tr data-id="{{res.id}}">
-                    <td class="pref">{{res.prefix}}</td>
+                    <td class="pref">{{res.pref}}</td>
                     <td class="num">{{res.num}}</td>
                     <td>{{res.name}}</td>
 		    <td>{{res.qnt}}</td>
