--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <META name="viewport" content="width=device-width, initial-scale=1">
-    <title>ОГК</title>
+    <title>ОГК {{pref}}{{num}}</title>
 
     <!-- styles -->
     {% style "/css/bootstrap.min.css" %}
