--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -53,7 +53,7 @@
             {%if identity%}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                        {{identity}} <span class="caret"></span>
+                        {{identity.login}} <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu" role="menu">
                         <li>
