--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -51,6 +51,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {%if identity%}
+              {%if identity.admin %}
+                <li><a href="/admin">Управление</a></li>
+              {% endif %}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
                         {{identity.login}} <span class="caret"></span>
