--- a/resources/templates/admin/users.html
+++ b/resources/templates/admin/users.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
-  <div class="col-md-offset-1">
+  <div class="col-md-2">
+    {% include "admin/left-nav-bar.html" %}
+  </div>
+  <div class="col-md-10">
     <h3>Список пользователей</h3>
        <table class="table table-condensed">
         <tr>
