--- a/resources/templates/admin/users.html
+++ b/resources/templates/admin/users.html
@@ -8,12 +8,13 @@
     <h3>Список пользователей</h3>
        <table class="table table-condensed">
         <tr>
-            <th>Id</th><th>Login</th><th>Admin?</th>
+            <th>Id</th><th>Login</th><th>Последный вход</th><th>Admin?</th>
         </tr>
         {% for user in users %}
             <tr data-id="{{user.id}}">
                 <td>{{user.id}}</td>
                 <td>{{user.login}}</td>
+                <td>{{user.last_login}}</td>
                 <td>{{user.admin}}</td>
             </tr>
         {% endfor %}
