Add link to database control page

--- a/resources/templates/admin/left-nav-bar.html
+++ b/resources/templates/admin/left-nav-bar.html
@@ -5,4 +5,7 @@
   <li role="presentation" class="">
     <a href="{{servlet-context}}/admin/updates">Обновления</a>
   </li>
+  <li role="presentation" class="">
+    <a href="{{servlet-context}}/admin/base">База</a>
+  </li>
 </ul>
