--- a/resources/templates/occurrence/results.html
+++ b/resources/templates/occurrence/results.html
@@ -4,7 +4,8 @@
     <div class="col-md-offset-1 col-md-8">
         {% for res in results %}
             {% if forloop.first %}
-                <h3>Входимость {{pref}} {{num}} {{name}}</h3>
+                <h3 data-name="{{pref}}{{num}}" onclick="clickHeader()">
+                Входимость {{pref}} {{num}} {{name}}</h3>
                 <table class="table-bordered table-condensed">
                 <caption>
                     <h6 class="bg-danger">Выборка данных на {{db-update-date|date:"dd.MM.yyyy"}}</h6>
