Add clicked class
To visualy hightlight last clicked row in results tables.

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -2,6 +2,10 @@
     background-color: #55ffaa;
  }
 
+.clicked {
+    background-color: mediumturquoise;
+}
+
 #floatform {
     background: white;
     position:fixed;
