--- a/resources/templates/composition/results.html
+++ b/resources/templates/composition/results.html
@@ -35,6 +35,7 @@
     <p><a href="{{servlet-context}}/composition/results?id=">Состав</a></p>
     <p><a href="{{servlet-context}}/occurrence/results?id=">Входимость</a></p>
     <p><a href="{{servlet-context}}/metals/results?id=">Драгметаллы</a></p>
+    <p><a href="{{servlet-context}}/unit/params?id=">Параметры</a></p>
 </div>
 
 {% include "search_form.html" %}
