--- a/resources/templates/params/values/index.html
+++ b/resources/templates/params/values/index.html
@@ -1,61 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
-{% if identity %}
 <div class="row">
-  <div class="col-md-offset-2 col-md-7">
-    <div class="col-md-offset-3"><h2>Добавить параметр</h2>
-    <a href="{{servlet-context}}/params">Нет нужного параметра?</a></div>
-    <form class="form-inline" action="{{servlet-context}}/unit/params"
-	  id="addUnitParamsForm" method="post">
-      {% if error %}
-      <div class="alert alert-danger" role="alert">
-        {{error}}
-      </div>
-      {% endif %}
-      {% if message %}
-      <div class="alert alert-success" role="alert">
-        {{message}}
-      </div>
-      {% endif %}
-      <input type="hidden" name="id" value="{{unit.id}}">
-      <div class="form-group">
-        <label for="inputParamType" class="col-md-3 control-label">Параметр</label>
-        <div class="col-md-6">
-          <select class="form-control" id="inputParam" name="param">
-	{% for param in params %}
-            <option value="{{param.id}}">{{param.name}}</option>
-	{% endfor %}
-          </select>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-md-offset-3 col-md-6">
-            <button type="submit" class="button button-default">Добавить</button>
-        </div>
-      </div>
-    </form>
-  </div>
-</div>
-{% endif %}
-<div class="row">
-    <div class="col-md-offset-2 col-md-6">
-      <h3>Список параметров {{unit.pref}}{{unit.num}} {{unit.name}}</h3>
+    <div class="col-md-offset-1 col-md-6">
+      <h3>Список параметров {{unit.prefix}}{{unit.num}} {{unit.name}}</h3>
+    {% for up in unit-params %}
+      {% if forloop.first %}
       <p><a href="{{servlet-context}}/unit/params/edit?id={{unit.id}}"
 	    class="btn btn-link">Редактировать значения</a></p>
-    {% for up in unit-params %}
-    {% if forloop.first %}
-    <table class="table-bordered table-condensed">
+      <table class="table-bordered table-condensed">
       <tr><th>Параметр</th><th>Значение</th></tr>
-    {% endif %}
+      {% endif %}
       <tr>
 	<td>{{up.name}}</td>
 	<td>{{up.value}}</td>
       </tr>
-    {% if forloop.last %}
-    </table>
-    {% endif %}
-    {% empty %}
-       <h3>У выбранной записи нет назначенных параметров</h3>
+      {% if forloop.last %}
+      </table>
+      {% endif %}
+      {% empty %}
+      <h3>У выбранной записи нет назначенных параметров</h3>
+      <p><a href="{{servlet-context}}/unit/params/edit?id={{unit.id}}">Добавить</a></p>
     {% endfor %}
     </div>
 </div>
