Add link to parameters view page

--- a/resources/templates/plan/index.html
+++ b/resources/templates/plan/index.html
@@ -32,6 +32,7 @@
 <div id="popup" class="hidden-print">
     <p><a href="{{servlet-context}}/composition/results?id=">Состав</a></p>
     <p><a href="{{servlet-context}}/metals/results?id=">Драгметаллы</a></p>
+    <p><a href="{{servlet-context}}/unit/params?id=">Параметры</a></p>
     <p><a id="aDiff" href="=" title="Добавить для сравнения">К сравнению</a></p>
 </div>
 <div id="diffForm" class="hidden-print">
