--- a/resources/templates/auth/login.html
+++ b/resources/templates/auth/login.html
@@ -3,33 +3,33 @@
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
         {%if just-registered?%}
-        <div class="alert alert-success" role="alert"><p>You`w been successfully registered! Now you can login.</p></div>
+        <div class="alert alert-success" role="alert"><p>Вы успешно зарегистрированы. Теперь можно войти.</p></div>
         {%endif%}
         <form class="form-horizontal" action="{{servlet-context}}/auth/login"
         method="POST">
             {% csrf-field %}
             <div class="form-group {%if errors.login%}has-error{%endif%}">
-                <label for="inputLogin" class="control-label">Login</label>
+                <label for="inputLogin" class="control-label">Логин</label>
                 <input type="text" class="form-control" id="inputLogin"
-                    name="login" placeholder="Enter login" value="{{login}}">
+                    name="login" placeholder="Введите логин" value="{{login}}">
                 {% if errors.login %}
                     <span class="help-block">{{errors.login|first}}</span>
                 {% endif %}
             </div>
             <div class="form-group {%if errors.password%}has-error{%endif%}">
-                <label for="inputPassword" class="control-label">Password</label>
+                <label for="inputPassword" class="control-label">Пароль</label>
                 <input type="password" class="form-control" id="inputPassword"
-                    name="password" placeholder="Enter password">
+                    name="password" placeholder="Введите пароль">
                 {% if errors.password %}
                     <span class="help-block">{{errors.password|first}}</span>
                 {% endif %}
             </div>
             <div class="form-group">
-                <input type="checkbox" name="remember" value="true">Remember me
+                <input type="checkbox" name="remember" value="true">Запомнить меня
                 </input>
             </div>
             <div class="form-group">
-                <button type="submit"class="button button-default">Login</button>
+                <button type="submit"class="button button-default">Войти</button>
             </div>
         </form>
     </div>
