--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -63,7 +63,7 @@
                             <a href="{{ url('/logout') }}"
                                 onclick="event.preventDefault();
                                          document.getElementById('logout-form').submit();">
-                                Logout
+                                Выйти
                             </a>
                             <form id="logout-form" action="/auth/logout" method="POST" style="display: none;">
                                 {% csrf-field %}
@@ -74,12 +74,12 @@
             {%else%}
                 <li class="nav-item">
                     <a href="{{servlet-context}}/auth/register" class="nav-link">
-                        Register
+                        Регистрация
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="{{servlet-context}}/auth/login" class="nav-link">
-                        Login
+                        Войти
                     </a>
                 </li>
             {%endif%}
