Add params reports to admin tools

--- a/resources/templates/admin/left-nav-bar.html
+++ b/resources/templates/admin/left-nav-bar.html
@@ -8,4 +8,7 @@
   <li role="presentation" class="">
     <a href="{{servlet-context}}/admin/base">База</a>
   </li>
+  <li role="presentation" class="">
+    <a href="{{servlet-context}}/admin/params">Параметры</a>
+  </li>
 </ul>
