Fix tab insertion in textarea

--- a/resources/templates/params/values/edit.html
+++ b/resources/templates/params/values/edit.html
@@ -56,9 +56,7 @@
       <input id="inputParamValue" class="form-control" name="value"
 	     type="text" value="{{up.value}}">
       {% else %}
-      <textarea rows="2" maxlength="2048" cols="50" name="value">
-	{{up.value}}
-      </textarea>
+      <textarea rows="2" maxlength="2048" cols="50" name="value">{{up.value}}</textarea>
       {% endifequal %}
     </div>
     <div class="col-md-1">
