--- a/resources/templates/occurrence/results.html
+++ b/resources/templates/occurrence/results.html
@@ -34,6 +34,7 @@
     <p><a href="{{servlet-context}}/composition/results?id=">Состав</a></p>
     <p><a href="{{servlet-context}}/occurrence/results?id=">Входимость</a></p>
     <p><a href="{{servlet-context}}/metals/results?id=">Драгметаллы</a></p>
+    <p><a href="{{servlet-context}}/statements?id=">Покупные</a></p>
     <p><a href="{{servlet-context}}/unit/params?id=">Параметры</a></p>
     <p><a id="aDiff" href="=" title="Добавить для сравнения">К сравнению</a></p>
 </div>
