--- a/resources/templates/products/results.html
+++ b/resources/templates/products/results.html
@@ -29,7 +29,7 @@
     <p><a href="{{servlet-context}}/metals/results?id=">Драгметаллы</a></p>
     <p><a href="{{servlet-context}}/unit/params?id=">Параметры</a></p>
     <p><a href="{{servlet-context}}/materials?id=">Материалы</a></p>
-    <p><a href="{{servlet-context}}/statements?id=">Ведомость</a></p>
+    <p><a href="{{servlet-context}}/statements?id=">Покупные</a></p>
     <p><a id="aDiff" href="=" title="Добавить для сравнения">К сравнению</a></p>
 </div>
 <div id="diffForm" class="hidden-print">
