Add links to statement page
Add linsk to statements page from search and composition results pages.

--- a/resources/templates/composition/results.html
+++ b/resources/templates/composition/results.html
@@ -38,6 +38,7 @@
     <p><a href="{{servlet-context}}/composition/results?id=">Состав</a></p>
     <p><a href="{{servlet-context}}/occurrence/results?id=">Входимость</a></p>
     <p><a href="{{servlet-context}}/metals/results?id=">Драгметаллы</a></p>
+    <p><a href="{{servlet-context}}/statements?id=">Покупные</a></p>
     <p><a href="{{servlet-context}}/unit/params?id=">Параметры</a></p>
 </div>
 
