--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -94,7 +94,7 @@
     <div class="navbar-fixed-bottom hidden-print" id="footer">
         <div class="navbar-inner">
             <div class="container-fluid">
-                <p class="text-center">Copyright &copy; 2020 Козлов А.С.</p>
+                <p class="text-center">Версия сайта 0.2.0-SNAPSHOT</p>
             </div>
         </div>
     </div>
