--- a/resources/templates/occurrence/results.html
+++ b/resources/templates/occurrence/results.html
@@ -27,9 +27,7 @@
     </div>
     
 </div>
-<div id="docs" class="hidden-print">
-        <ul class="list-unstyled"></ul>
-</div> 
+
 <div id="popup" class="hidden-print" title="Действия">
     <p><a href="{{servlet-context}}/composition/results?id=">Состав</a></p>
     <p><a href="{{servlet-context}}/occurrence/results?id=">Входимость</a></p>
@@ -39,6 +37,7 @@
     <p><a id="aDiff" href="=" title="Добавить для сравнения">К сравнению</a></p>
 </div>
 
+{% include "docs_panel.html" %}
 {% include "search_form.html" %}
 
 <div id="diffForm" class="hidden-print">
