Add parameters panel

--- a/resources/templates/composition/results.html
+++ b/resources/templates/composition/results.html
@@ -42,6 +42,7 @@
 
 {% include "docs_panel.html" %}
 {% include "search_form.html" %}
+{% include "parameter_panel.html" %}
 
 {% endblock %}
 {% block page-scripts %}
