--- a/resources/templates/occurrence/results.html
+++ b/resources/templates/occurrence/results.html
@@ -39,6 +39,7 @@
 
 {% include "docs_panel.html" %}
 {% include "search_form.html" %}
+{% include "parameter_panel.html" %}
 
 <div id="diffForm" class="hidden-print">
     <form>
