--- a/resources/templates/search/results.html
+++ b/resources/templates/search/results.html
@@ -36,6 +36,7 @@
 
 {% include "docs_panel.html" %}
 {% include "search_form.html" %}
+{% include "parameter_panel.html" %}
 
 <div id="diffForm" class="hidden-print">
     <form>
