Add click handler to table rows

--- a/resources/templates/products/results.html
+++ b/resources/templates/products/results.html
@@ -51,7 +51,7 @@
 {% script "/js/results.js" %}
 <script type="text/javascript">
     $(document).ready(function() {
-        $('tr:not(:first)').mouseenter(enterRow);
+        $('tr:not(:first)').mouseenter(enterRow).click(clickProdRow);
         $(document).click(function(){
             $('#popup').hide();
             $('tr.selection').toggleClass('selection');
